# transcrivo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  TRADEMARKS.md
.github/workflows/: build-cli-windows.yml  build-cli.yml  release-cli-windows.yml  release-cli.yml
cli/: Cargo.toml  README.md  install.ps1  install.sh
cli/src/: cli.rs  lib.rs  main.rs
cli/src/audio/: capture.rs  devices.rs  linux.rs  linux_native.rs  mod.rs  preprocess.rs  segmenter.rs  vad.rs  windows.rs  windows_native.rs
cli/src/commands/: devices.rs  mod.rs  models.rs  run.rs
cli/src/logging/: config.rs
cli/src/session/: manager.rs  mod.rs  models.rs  sequence.rs
cli/src/transcribe/: mod.rs  pipeline.rs  publisher.rs  stage.rs  whisper_cpp.rs
cli/src/transport/: mod.rs  protocol.rs  websocket.rs
cli/src/util/: ids.rs  mod.rs  paths.rs  shutdown.rs  time.rs  whisper_log.rs
cli/tests/: audio_helpers.rs  linux_capture.rs  preprocess.rs  protocol_compat.rs  run_command.rs  run_live_session.rs  run_mock_backend.rs  source_models.rs  transcribe.rs  websocket_client.rs
specs/: cli-audio-pipeline-cleanup.md  cli-websocket-payload-simplification.md  features-to-work-on.md  polar-session-purchases.md  session-expiration.md  session-transcript-pagination.md  session-types-writing-and-meeting-summary.md  solution-generation.md  windows-live-capture-plan.md
web/: .env.example  README.md  drizzle.config.ts  nixpacks.toml  package.json  server.ts
web/drizzle/: 0000_rainy_silk_fever.sql  0000_reflective_genesis.sql  0001_many_lady_mastermind.sql  0001_sad_bug.sql  0002_fearless_the_professor.sql  (+5 more)
(+107 files in other folders)
