[package]
name = "transcrivo-cli-rs"
version = "0.4.1"
edition = "2021"
default-run = "transcrivo"

[features]
default = []
whisper-gpu = []
whisper-gpu-vulkan = ["whisper-gpu", "whisper-rs/vulkan"]
whisper-gpu-cuda = ["whisper-gpu", "whisper-rs/cuda"]

[[bin]]
name = "transcrivo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "v7"] }
whisper-rs = { version = "0.16", default-features = false, features = ["tracing_backend"] }

[target.'cfg(target_os = "linux")'.dependencies]
libspa = { version = "0.9" }
pipewire = { version = "0.9" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Devices_FunctionDiscovery", "Win32_Media_Audio", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }
